<resources>
    <string name="app_name">Formula One</string>
    <string name="gp_text">Grand Prix</string>
    <string name="circuitos">Circuits</string>
    <string name="pilotos">Drivers</string>
    <string name="piloto">Driver</string>
    <string name="equipos">Teams</string>
    <string name="equipo">Team</string>
    <string name="ronda_text">Round</string>
    <string name="circuitName_text">Circuit\'s name</string>
    <string name="countryName_text">Circuit\'s country</string>
    <string name="cityName_text">Circuit\'s city</string>
    <string name="day_text">Race day</string>
    <string name="hour_text">Race hour</string>
    <string name="name_text">Name</string>
    <string name="code_text">Code</string>
    <string name="number_text">Driver\'s number</string>
    <string name="fecnac">Birth date</string>
    <string name="nac">Nationality</string>
    <string name="smo_text">Show more</string>
    <string name="new_team">New team</string>
    <string name="equipo_name">Team\'s name</string>
    <string name="piloto1name">First driver\'s name</string>
    <string name="piloto1no">First driver\'s number</string>
    <string name="piloto2name">Second driver\'s name</string>
    <string name="piloto2no">Second driver\'s number</string>
    <string name="confirm">Create team</string>
    <string name="cancel">Cancel</string>
    <string name="error_message">There cannot be: empty values, a number less than 1 or greater than 99, repetition of number or repetition of driver</string>
</resources>