<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.equipo.EquipoFragment">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_team">
    </com.google.android.material.appbar.MaterialToolbar>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/equipoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        android:hint="@string/equipo_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreEquipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namePiloto1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="@id/equipoNombre"
        app:layout_constraintTop_toBottomOf="@id/equipoNombre"
        android:hint="@string/piloto1name">
        <AutoCompleteTextView
            android:id="@+id/nombrePiloto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:inputType="none">
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberPiloto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="@id/namePiloto1"
        app:layout_constraintTop_toBottomOf="@id/namePiloto1"
        android:hint="@string/piloto1no">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numeroPiloto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:inputType="number">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namePiloto2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="@id/equipoNombre"
        app:layout_constraintTop_toBottomOf="@id/numberPiloto1"
        android:hint="@string/piloto2name">
        <AutoCompleteTextView
            android:id="@+id/nombrePiloto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:inputType="none">
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberPiloto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="@id/namePiloto2"
        app:layout_constraintTop_toBottomOf="@id/namePiloto2"
        android:hint="@string/piloto2no">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numeroPiloto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:inputType="number">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cancel_button"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPiloto2"
        app:layout_constraintVertical_bias="0.129">
    </Button>
    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberPiloto2"
        app:layout_constraintVertical_bias="0.125">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>